3.2.3

  * enh: english documentation;
  * fix: some compilation warnings;
  * fix: makefile and source code cleanups;
  * fix: possible segfault;
  * fix: do not eat keyboard input;
  * new: tiny instead for metaparser;
  * new: telegram and vk bots.

 -- Peter Kosyh <p.kosyh@gmail.com>  Fri, 15 Feb 2019 16:25:00 +0300

3.2.2

  * new: mobile theme;
  * new: -lang parameter;
  * new: -notheme parameter;
  * new: instead.screen_size();
  * enh: themes cleanups;
  * new: cmake and LuaJIT build (-DWITH_LUAJIT=1);
  * enh: autosave in emscripten build;
  * enh: load status in emscripten build;
  * new: machine-translated English manual;
  * fix: Lua5.3 compatibility;
  * fix: ini method and load parameter;
  * fix: -appdata and system build;
  * fix: build with zlib;
  * fix: std.fmt and substitutions ($);
  * fix: segfault on restart;
  * fix: build with old gcc;

 -- Peter Kosyh <p.kosyh@gmail.com>  Sat, 1 Sep 2018 09:21:00 +0300

3.2.1

  * fix: save in lua 5.2 (proxy objects);
  * new: {$fmt ... } substitution;
  * fix: instead.set_sound() and snd.play();
  * fix: direct mode fix;
  * fix: bugs in documentation.
  * new: project moved to https://instead-hub.github.io

 -- Peter Kosyh <p.kosyh@gmail.com>  Sun, 22 Apr 2018 13:34:00 +0300

3.2.0

  * fix: segfault on path overflow fix;
  * fix: segfault in std.readdir fix;
  * fix: forever loop bug (unpaired {});
  * fix: theme.restore();
  * fix: fmt.anchor(), theme.snd.click(), push(), pop();
  * fix: snapshots module bugs;
  * fix: gamefile with main3.lua;
  * fix: noinv/nolife modules ('step' mod_call error);
  * fix: xact booleans parameters;
  * fix: chnage_pl with string argument;
  * fix: always = true in dialog phrase;
  * fix: use opengl on Windows instead d3d (nvidia fullscreen bug);
  * fix: win32 and path encoding problem;
  * fix: instead.menu();
  * fix: save declared functions in tables;
  * fix: sprite font:size with style;
  * enh: Android port improvements;